Switch from Huggingface API to Gemini API

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@huggingface/inference": "^2.6.4",
     "@supabase/supabase-js": "^2.49.4",
     "@types/cors": "^2.8.17",
